integrate slier into characters; fix overlap on comic book

--- a/src/app/SharedComponentModules/slider/slider/slider.component.css
+++ b/src/app/SharedComponentModules/slider/slider/slider.component.css
@@ -1,8 +1,5 @@
 section {
-    border-left: 2px solid white;
     display: flex;
-    flex-flow: column;
-    width: 90px;
     padding: 3px;
     margin-left: 7px;
     justify-content: center;
@@ -39,7 +36,7 @@ label {
     right: 7px;
     background: #fcfff4;
     border-radius: 50px;
-    transition: all 0.4s ease;
+    transition: all .3s;
     box-shadow: 0px 2px 5px 0px rgba(0,0,0,0.3);
     background: linear-gradient(to top, #fcfff4 0%, #dfe5d7 40%, #b3bead 100%);
 }
