--- a/src/app/comic-book/book/book.component.css
+++ b/src/app/comic-book/book/book.component.css
@@ -118,6 +118,7 @@ button {
   z-index: 10;
   margin-bottom: 17px;
   margin-top: 17px;
+  padding: 5px 15px 5px 15px;
 }
 
 span#help {
