--- a/src/app/worldbuilding/bestiary/bestiary/bestiary.component.css
+++ b/src/app/worldbuilding/bestiary/bestiary/bestiary.component.css
@@ -40,6 +40,7 @@ app-slider {
     display: flex;
     align-content: stretch;
     border-right: 2px white solid;
+    border-left: 2px solid white;
 }
 
 label {
